# uv2nix-nbdev-template

./: .gitignore  README.md  copier.yml  flake.nix  flake.nix.jinja  pyproject.toml  pyproject.toml.jinja  settings.ini  setup.py
nbs/: _quarto.yml  index.ipynb  nbdev.yml  styles.css  utils.ipynb
src/: pyproject.toml  pyproject.toml.jinja
src/uv2nix_nbdev_template/: utils.py
src/{{ package_name }}/: _modidx.py
