[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "uv2nix_nbdev_template"
version = "0.1.0"
description = "A minimal template for nbdev projects using uv2nix"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "KaoruBB", email = "{kaorubabasaki@gmail.com}"}]
keywords = ['template', 'uv2nix', 'nbdev']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 2 - Pre-Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = []

[project.urls]
Repository = "https://github.com/KaoruBB/uv2nix-nbdev-template/"
Documentation = "https://KaoruBB.github.io/uv2nix_nbdev_template/"

[project.entry-points.nbdev]
uv2nix_nbdev_template = "uv2nix_nbdev_template._modidx:d"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["uv2nix_nbdev_template*"]

[tool.nbdev]
doc_path = "docs"
lib_path = "src/uv2nix_nbdev_template"
custom_sidebar = true
title = "uv2nix_nbdev_template"
