[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ package_name }}"
version = "0.1.0"
description = "{{ description }}"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "{{ author_name }}", email = "{{ author_email }}"}]
keywords = ['template', 'uv2nix', 'nbdev']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 2 - Pre-Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "fastcore>=1.12.22",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbdev>=3.0.12",
]

[project.urls]
Repository = "https://github.com/{{ github_username }}/{{ repo_name }}/"
Documentation = "https://{{ github_username }}.github.io/{{ repo_name }}/"

[project.entry-points.nbdev]
{{ package_name }} = "{{ package_name }}._modidx:d"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["{{ package_name }}*"]

[tool.nbdev]
nbs_path = "nbs"
doc_path = "docs"
lib_path = "src/{{ package_name }}"
custom_sidebar = true
title = "{{ package_name }}"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.15.4",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 160
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long
